代码练习与拓展